Add Shock Slide: 63% Bounce Rate Alert, and update Gateway Context with VC details.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -44,6 +44,41 @@
             </div>
         </section>
 
+        <!-- Slide 2: The Shock (Bounce Rate) -->
+        <section class="slide slide-alt" style="justify-content: center; align-items: center;">
+            <div class="animate-up" style="display: flex; align-items: center; gap: 4rem;">
+                <!-- Red Alert Circle -->
+                <div style="
+                    width: 300px; 
+                    height: 300px; 
+                    border-radius: 50%; 
+                    background: #e63946; 
+                    display: flex; 
+                    flex-direction: column;
+                    justify-content: center; 
+                    align-items: center; 
+                    color: white;
+                    box-shadow: 0 0 50px rgba(230, 57, 70, 0.5);
+                    animation: pulse 2s infinite;
+                ">
+                    <span style="font-size: 5rem; font-weight: 800; line-height: 1;">63%</span>
+                    <span style="font-size: 1.5rem; font-weight: 600; text-transform: uppercase;">Bounce Rate</span>
+                </div>
+                
+                <!-- The Question -->
+                <div style="text-align: left;">
+                    <h2 style="font-size: 8rem; margin: 0; line-height: 1; color: var(--deep-navy);">Why?</h2>
+                    <p style="font-size: 1.5rem; color: #666; margin-top: 1rem;">We have the Traffic. We have the Authority.<br>So why represent failure?</p>
+                </div>
+            </div>
+            <style>
+                @keyframes pulse {
+                    0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(230, 57, 70, 0.7); }
+                    70% { transform: scale(1.05); box-shadow: 0 0 0 20px rgba(230, 57, 70, 0); }
+                    100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(230, 57, 70, 0); }
+                }
+            </style>
+
         <!-- Slide 2: The Diagnosis -->
         <section class="slide slide-alt">
             <div class="animate-up">
@@ -125,9 +160,9 @@
                         <p style="margin-top: 0.5rem; color: var(--gold); font-size: 0.9rem;">Value: Talent Retention.</p>
                     </div>
                     <div class="card">
-                        <h3>4. The Gateway</h3>
-                        <p>The legal and logistical bridge between East (China) and West (London).</p>
-                        <p style="margin-top: 0.5rem; color: var(--gold); font-size: 0.9rem;">Value: Market Access (Saudi/Egypt).</p>
+                        <h3>4. The Gateway & Network</h3>
+                        <p>The bridge between East & West. Home to the region's top <strong>VCs & Angel Investors</strong>.</p>
+                        <p style="margin-top: 0.5rem; color: var(--gold); font-size: 0.9rem;">Value: Capital & Market Access.</p>
                     </div>
                 </div>
             </div>
