Fix Layout: Closed missing </section> tag in Slide 2.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -78,6 +78,7 @@
                     100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(230, 57, 70, 0); }
                 }
             </style>
+        </section>
 
         <!-- Slide 2: The Diagnosis -->
         <section class="slide slide-alt">
