Refine Value Gap: Changed Trust to 'Pain & Solution' to focus on problem solving.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -178,10 +178,10 @@
                 <div class="card-grid" style="grid-template-columns: 1fr 1fr 1fr;">
                     <!-- Row 1 -->
                     <div class="card" style="border-left: 5px solid #e63946;">
-                        <h3>1. Trust & Risk</h3>
-                        <p><strong>User Need:</strong> "Is my business safe?"</p>
-                        <p style="margin-top: 0.5rem; color: #666;"><strong>Site Problem:</strong> No Case Studies. Shallow content on protection.</p>
-                        <p style="margin-top: 0.5rem; font-weight: bold;">Impact: Low Trust.</p>
+                        <h3>1. Pain & Solution</h3>
+                        <p><strong>User Need:</strong> "Does this fix my problem?"</p>
+                        <p style="margin-top: 0.5rem; color: #666;"><strong>Site Problem:</strong> No clear solution for specific pains (e.g. Debt in Saudi).</p>
+                        <p style="margin-top: 0.5rem; font-weight: bold;">Impact: No Perceived Value.</p>
                     </div>
                     <div class="card" style="border-left: 5px solid #e63946;">
                         <h3>2. Utility & Cost</h3>
