Refine Core Pillars: Updated Point 3 to 'Solution Architecture' to align with B2B strategy.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -255,8 +255,8 @@
                         <p>Clear, distinct user journeys for Business, Lifestyle, and Ecosystem.</p>
                     </div>
                     <div class="card">
-                        <h3>3. Content Depth</h3>
-                        <p>Comprehensive "How-to" setup guides and localized deep-dives.</p>
+                        <h3>3. Solution Architecture</h3>
+                        <p>Shift from generic "How-to" to specific <strong>"Problem-Solving" Hubs & Case Studies</strong>.</p>
                     </div>
                     <div class="card">
                         <h3>4. Authority (E-E-A-T)</h3>
