Refine IA Slide: Replaced generic IA visual with UX & Content Strategy pillars (Navigation, Value, Imagery, Utility).

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -522,50 +522,40 @@
             </div>
         </section>
 
-        <!-- Slide 15: NEW IA VISUAL (Deep to Flat) -->
+        <!-- Slide 15: UX & Content Architecture -->
         <section class="slide slide-alt">
             <div class="animate-up">
                 <span class="tag tag-teal">Architecture</span>
-                <h2>Information Architecture Strategy</h2>
-                <p style="margin-bottom: 2rem;">Moving from a deep, siloed structure to a flat, authority-passing "Hub" model.</p>
+                <h2>Content & UX Strategy</h2>
+                <p style="margin-bottom: 2rem;">Moving from "Brochure" to "Conversion Engine" via 4 key pillars.</p>
                 
-                <div class="card-grid" style="grid-template-columns: 1fr 1fr; align-items: start;">
-                    <!-- Before -->
-                    <div class="card" style="background: rgba(255,0,0,0.05);">
-                        <h3 style="color: #e63946;">Current: Deep & Siloed</h3>
-                        <div class="tree-visual tree-deep">
-                            <div class="node-root">Home</div>
-                            <div class="branch">
-                                <span class="connector"></span>
-                                <div class="node">Business</div>
-                                <div class="branch">
-                                    <div class="node">Setup</div>
-                                    <div class="branch">
-                                        <div class="node level-4">Steps...</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <p style="margin-top: 1rem; font-size: 0.9rem;">Link equity dilutes before reaching converting pages.</p>
+                <div class="card-grid" style="grid-template-columns: repeat(2, 1fr);">
+                    <!-- 1. Navigation -->
+                    <div class="card">
+                        <h3>1. Navigation for Pain Points</h3>
+                        <p style="margin-top: 0.5rem; color: #666;"><strong>Current:</strong> "Business" (Too Broad).</p>
+                        <p style="margin-top: 0.5rem;"><strong>New:</strong> "Scale to Saudi", "Protect Assets", "Start Retail".</p>
                     </div>
 
-                    <!-- After -->
-                    <div class="card" style="background: rgba(0,128,128,0.05);">
-                        <h3 style="color: var(--primary-teal);">Proposed: Flat Hubs</h3>
-                        <div class="tree-visual tree-flat">
-                            <div class="node-root">Home</div>
-                            <div class="flat-row">
-                                <div class="node-hub">Setup & Fix Hub</div>
-                                <div class="node-hub">Wealth Hub</div>
-                                <div class="node-hub">Lifestyle</div>
-                            </div>
-                            <div class="flat-pages">
-                                <span class="node-page">Calc</span>
-                                <span class="node-page">Guides</span>
-                                <span class="node-page">Events</span>
-                            </div>
-                        </div>
-                        <p style="margin-top: 1rem; font-size: 0.9rem;"><strong>Hubs</strong> sit 1 click from home, passing max authority.</p>
+                    <!-- 2. Value Props -->
+                    <div class="card">
+                        <h3>2. Value Proposition Design</h3>
+                        <p style="margin-top: 0.5rem; color: #666;"><strong>Current:</strong> "World Class Hub".</p>
+                        <p style="margin-top: 0.5rem;"><strong>New:</strong> "English Law Protection", "0% Customs Tax".</p>
+                    </div>
+
+                    <!-- 3. Meaningful Imagery -->
+                    <div class="card">
+                        <h3>3. Meaningful Imagery</h3>
+                        <p style="margin-top: 0.5rem; color: #666;"><strong>Current:</strong> Generic Skyscrapers.</p>
+                        <p style="margin-top: 0.5rem;"><strong>New:</strong> Real Founders, Court Rooms, Logistics Hubs.</p>
+                    </div>
+
+                    <!-- 4. Utility (Calculators) -->
+                    <div class="card" style="border: 2px solid var(--primary-teal);">
+                        <h3 style="color: var(--primary-teal);">4. Utility & Tools</h3>
+                        <p style="margin-top: 0.5rem; color: #666;"><strong>Current:</strong> "Enquire Now" Form.</p>
+                        <p style="margin-top: 0.5rem;"><strong>New:</strong> "Cost Calculator", "Setup Timeline Tool".</p>
                     </div>
                 </div>
             </div>
