Refine Slide 15: Implemented 'Expansion Planner' and 'Contextual Linking' based on Case Study insights.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -534,28 +534,28 @@
                     <div class="card">
                         <h3>1. Navigation for Pain Points</h3>
                         <p style="margin-top: 0.5rem; color: #666;"><strong>Current:</strong> "Business" (Too Broad).</p>
-                        <p style="margin-top: 0.5rem;"><strong>New:</strong> "Scale to Saudi", "Protect Assets", "Start Retail".</p>
+                        <p style="margin-top: 0.5rem;"><strong>New:</strong> "Scale to Saudi", "Protect Assets", <strong>"Case Studies"</strong>.</p>
                     </div>
 
-                    <!-- 2. Value Props -->
+                    <!-- 2. Contextual Bridging -->
                     <div class="card">
-                        <h3>2. Value Proposition Design</h3>
-                        <p style="margin-top: 0.5rem; color: #666;"><strong>Current:</strong> "World Class Hub".</p>
-                        <p style="margin-top: 0.5rem;"><strong>New:</strong> "English Law Protection", "0% Customs Tax".</p>
+                        <h3>2. Contextual Linking</h3>
+                        <p style="margin-top: 0.5rem; color: #666;"><strong>Current:</strong> Dead-end Lifestyle pages.</p>
+                        <p style="margin-top: 0.5rem;"><strong>New:</strong> Sidebars on Dining pages: "Doing Business? Protect your Brand."</p>
                     </div>
 
                     <!-- 3. Meaningful Imagery -->
                     <div class="card">
                         <h3>3. Meaningful Imagery</h3>
                         <p style="margin-top: 0.5rem; color: #666;"><strong>Current:</strong> Generic Skyscrapers.</p>
-                        <p style="margin-top: 0.5rem;"><strong>New:</strong> Real Founders, Court Rooms, Logistics Hubs.</p>
+                        <p style="margin-top: 0.5rem;"><strong>New:</strong> Case Study Heroes: "The Importer", "The Fintech Founder".</p>
                     </div>
 
                     <!-- 4. Utility (Calculators) -->
                     <div class="card" style="border: 2px solid var(--primary-teal);">
                         <h3 style="color: var(--primary-teal);">4. Utility & Tools</h3>
                         <p style="margin-top: 0.5rem; color: #666;"><strong>Current:</strong> "Enquire Now" Form.</p>
-                        <p style="margin-top: 0.5rem;"><strong>New:</strong> "Cost Calculator", "Setup Timeline Tool".</p>
+                        <p style="margin-top: 0.5rem;"><strong>New:</strong> "Expansion Planner" (Legal + Logistics Savings Calculator).</p>
                     </div>
                 </div>
             </div>
