Refine Off-Page Slide: Implemented Toxic Backlink Risk Alert and Regional Partner Strategy.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -564,37 +564,35 @@
         <!-- Slide 16: Off-Page & Authority -->
         <section class="slide slide-alt">
             <div class="animate-up">
-                <span class="tag tag-teal">Authority</span>
-                <h2>Off-Page Strength & Opportunities</h2>
+                <span class="tag tag-teal">Authority Health</span>
+                <h2>Off-Page: Risk & Opportunity</h2>
                 <div class="card-grid" style="grid-template-columns: repeat(2, 1fr);">
                     
-                    <!-- Current Status -->
-                    <div class="card">
-                        <h3>Current Status</h3>
-                         <div style="margin: 1rem 0; height: 150px; overflow: hidden; border-radius: 8px; border: 1px solid #eee;">
-                            <img src="assets/authority-score.png" alt="Authority Score 48" style="width: 100%; height: 100%; object-fit: cover; object-position: top left; background: #fff;">
-                        </div>
+                    <!-- The Risk (Defense) -->
+                    <div class="card" style="border-left: 5px solid #e63946;">
+                        <h3 style="color: #e63946;">CRITICAL RISK: Toxic Backlinks</h3>
                         <div style="display: flex; align-items: center; gap: 1rem; margin-top: 1rem;">
-                            <div class="metric-big" style="color: var(--primary-teal);">48</div>
+                            <div class="metric-big" style="color: #e63946;">27.8%</div>
                             <div>
-                                <p><strong>Authority Score</strong></p>
-                                <p style="font-size: 0.9rem;">"Very Good" but room for growth vs. global hubs.</p>
+                                <p><strong>High Toxicity</strong></p>
+                                <p style="font-size: 0.9rem;">570 Toxic Links detected. Risk of Google Penalty.</p>
                             </div>
                         </div>
-                        <p style="margin-top: 1rem;"><strong>Backlinks:</strong> 52.9K links. Steady growth trend (+4K/month).</p>
+                        <p style="margin-top: 1rem;"><strong>Immediate Action:</strong> Submit Disavow File to Google Search Console to protect Domain Health.</p>
                     </div>
 
-                    <!-- Opportunities -->
-                    <div class="card">
-                        <h3>Strategic Opportunities</h3>
+                    <!-- The Opportunity (Offense) -->
+                    <div class="card" style="border-left: 5px solid var(--primary-teal);">
+                        <h3>Strategic Opportunity: Regional Trust</h3>
+                        <p style="margin-bottom: 0.5rem;"><strong>The Problem:</strong> We have global links, but lack <strong>Regional Relevance</strong>.</p>
                         <ul style="margin-top: 1rem; line-height: 1.6;">
                             <li style="margin-bottom: 1rem;">
-                                <strong>Digital PR & AI Visibility:</strong><br>
-                                Pitching "State of Fintech" reports doesn't just build links—it <strong>trains AI models</strong> (ChatGPT, Gemini) to cite DIFC as the primary source.
+                                <strong>Partner with Tenants:</strong><br>
+                                Encourage the 5,000+ resident firms (Banks/Law Firms) to link from their "Dubai Locations" page.
                             </li>
                             <li>
-                                <strong>Tenant Partner Program:</strong><br>
-                                Systematically encourage the 5,000+ resident firms to add a "Located in DIFC" badge linking back to us.
+                                <strong>Regional Chambers:</strong><br>
+                                Target mentions from Chambers of Commerce in <strong>Saudi, Egypt, & Jordan</strong> to signal "Regional Authority".
                             </li>
                         </ul>
                     </div>
