Refine Competitive Landscape: Updated Slide 17 to contrast 'Crypto Niche' vs 'Real Trade' opportunity.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -608,36 +608,42 @@
                 <h2>Competitive Landscape & Gaps</h2>
                 
                 <div class="card-grid" style="grid-template-columns: repeat(2, 1fr); gap: 2rem;">
-                    <!-- ADGM -->
+                    <!-- The Competitor Trap -->
                     <div class="card" style="border-top: 5px solid #e63946;">
-                        <h3 style="font-size: 1.3rem;">Abu Dhabi Global Market (ADGM)</h3>
-                        <p style="margin-bottom: 0.5rem;"><strong>Strengths:</strong> Niche Financial Terms</p>
+                        <h3 style="font-size: 1.3rem;">Competitor Focus (ADGM/Freezones)</h3>
+                        <p style="margin-bottom: 0.5rem;"><strong>The Trap:</strong> Fighting for Niche Trends</p>
                         <ul style="font-size: 0.95rem; color: #555;">
-                            <li>"Virtual assets" & "Crypto regulation"</li>
-                            <li>"Sustainable finance"</li>
+                            <li>"Crypto Regulation" & "Virtual Assets"</li>
+                            <li>"Cheapest License Cost" (Commoditized)</li>
                         </ul>
+                        <p style="margin-top: 1rem; font-size: 0.9rem; font-style: italic;">They fight for the "Tech Bro". We fight for the "Regional Trader".</p>
                     </div>
-                    <!-- DMCC -->
-                    <div class="card" style="border-top: 5px solid #e63946;">
-                        <h3 style="font-size: 1.3rem;">Dubai Multi Commodities Centre</h3>
-                        <p style="margin-bottom: 0.5rem;"><strong>Strengths:</strong> Volume & Setup</p>
+                    <!-- The DIFC Gap -->
+                    <div class="card" style="border-top: 5px solid var(--primary-teal);">
+                        <h3 style="font-size: 1.3rem;">The Real Economy Gap</h3>
+                        <p style="margin-bottom: 0.5rem;"><strong>The Opportunity:</strong> Regional Scale (Saudi/Egypt)</p>
                         <ul style="font-size: 0.95rem; color: #555;">
-                            <li>"Low-cost business setup"</li>
-                            <li>"Commodities trading"</li>
-                            <li>"Startup-friendly freezones"</li>
+                            <li>"Enforcing Contracts in KSA" (High Value)</li>
+                            <li>"Customs Clearing from China" (High Utility)</li>
                         </ul>
+                        <p style="margin-top: 1rem; font-size: 0.9rem; font-style: italic;">This is the <strong>Blue Ocean</strong>: Real Businesses needing Real Protection.</p>
                     </div>
                 </div>
 
                 <!-- Strategic Gap -->
                 <div class="card" style="margin-top: 2rem; background: var(--deep-navy); color: white;">
-                    <h3 style="color: var(--gold); margin-bottom: 1rem;">The DIFC Opportunity</h3>
+                    <h3 style="color: var(--gold); margin-bottom: 1rem;">The Winning Narrative</h3>
                     <div style="display: flex; gap: 2rem; flex-wrap: wrap;">
                         <div style="flex: 1;">
-                            <p style="margin-bottom: 0.5rem; opacity: 0.9;"><strong>We Own The Authority On:</strong></p>
-                            <p style="font-size: 1.1rem; font-weight: 600;">"Family Offices", "Wealth Management", "Institutional Banking"</p>
+                            <p style="margin-bottom: 0.5rem; opacity: 0.9;"><strong>Stop Selling:</strong></p>
+                            <p style="font-size: 1.1rem; font-weight: 600;">"Prestige Office Space" & "Generic Innovation"</p>
                         </div>
                         <div style="flex: 1; border-left: 2px solid var(--primary-teal); padding-left: 2rem;">
+                            <p style="margin-bottom: 0.5rem; opacity: 0.9;"><strong>Start Selling:</strong></p>
+                            <p style="font-size: 1.1rem; font-weight: 600;">"Risk Protection" & "Regional Market Access"</p>
+                        </div>
+                    </div>
+                </div>
                             <p style="margin-bottom: 0.5rem; opacity: 0.9;"><strong>The Keyword Gap:</strong></p>
                             <p>Lack of <em>long-tail educational content</em> to capture early intent.</p>
                             <p style="font-size: 0.9rem; color: var(--gold); margin-top: 0.5rem;"><em>e.g., "How to set up a family office in UAE"</em></p>
