Refine Experience Gap Slide: Prioritize B2B Education (Awareness) before Utility. Updated Funnel to Education -> Value -> Utility.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -478,46 +478,41 @@
             </div>
         </section>
 
-        <!-- Slide 14: Internal Linking -->
+        <!-- Slide 14: The Experience Gap (Education First) -->
         <section class="slide slide-light">
             <div class="animate-up">
-                <span class="tag tag-teal">Structure</span>
-                <h2>Internal Linking & Opportunity Gaps</h2>
+                <span class="tag tag-teal">Funnel Strategy</span>
+                <h2>The Experience Gap: B2B Awareness</h2>
                 
                 <div class="card-grid" style="grid-template-columns: repeat(2, 1fr); gap: 2rem;">
                     
-                    <!-- Internal Linking Issues -->
+                    <!-- The Trap (Utility First) -->
                     <div class="card" style="border-top: 5px solid #ffaa00;">
-                        <h3>Efficiency & Reach</h3>
-                        <div style="margin: 1rem 0; height: 180px; overflow: hidden; border-radius: 8px; border: 1px solid #eee;">
-                            <img src="assets/link-audit.png" alt="Internal Linking Graph" style="width: 100%; height: 100%; object-fit: contain; background: #fff;">
-                        </div>
-                        <ul style="font-size: 1rem; margin-top: 1rem;">
-                            <li style="color: #e63946;">⚠ <strong>252 Pages</strong> are > 3 clicks deep.</li>
-                            <li style="color: #e63946;">⚠ <strong>915 Pages</strong> have only 1 link.</li>
-                            <li style="margin-top: 0.5rem; font-size: 0.9rem;"><em>Note: Top-level structure is clean, but depth is the issue.</em></li>
+                        <h3>The Mistake: "Utility First"</h3>
+                        <p style="margin: 1rem 0; font-size: 1.1rem;"><strong>Current Flow:</strong> Traffic → "Enquire Now"</p>
+                        <ul style="font-size: 1rem; margin-top: 1rem; color: #666;">
+                            <li>Assumes user is "Provider Aware".</li>
+                            <li>Skips the "Problem/Solution" phase.</li>
+                            <li><strong>Result:</strong> High Bounce (User is not ready).</li>
                         </ul>
                     </div>
 
-                    <!-- Organic Growth Potential -->
+                    <!-- The Fix (Education First) -->
                     <div class="card" style="border-top: 5px solid var(--primary-teal);">
-                        <h3>Growth Potential</h3>
-                         <div style="margin: 1rem 0; height: 180px; overflow: hidden; border-radius: 8px; border: 1px solid #eee;">
-                            <img src="assets/onpage-opps.png" alt="Growth Potential Chart" style="width: 100%; height: 100%; object-fit: contain; background: #fff;">
-                        </div>
-                        <ul style="font-size: 1rem; margin-top: 1rem;">
-                            <li style="color: var(--primary-teal);">✔ <strong>+1000% Traffic Potential</strong></li>
-                            <li><strong>Target:</strong> Public Register (404k vol).</li>
-                            <li><strong>Strategy:</strong> Link high-potential pages from Homepage.</li>
-                        </ul>
+                        <h3>The Fix: "Education First"</h3>
+                        <p style="margin: 1rem 0; font-size: 1.1rem;"><strong>New Flow:</strong> Awareness → Value → Utility</p>
+                        <ol style="font-size: 1rem; margin-top: 1rem; padding-left: 1.5rem; line-height: 1.6;">
+                            <li><strong>Educate:</strong> "Why do I need English Law?" (Blog/Hub)</li>
+                            <li><strong>Prove:</strong> "How Importers Scale" (Case Study)</li>
+                            <li><strong>Convert:</strong> "Expansion Planner" (Utility)</li>
+                        </ol>
                     </div>
                 </div>
 
                 <!-- Solution Row -->
-                <div class="card" style="margin-top: 2rem; background: var(--light-grey);">
-                    <h3 style="margin-bottom: 0.5rem;">The Architecture Fix</h3>
-                    <p><strong>Problem:</strong> 93% of link equity goes to just 12% of pages.</p>
-                    <p><strong>Solution:</strong> Create "Category Hubs" to flatten structure and push authority to the 915 weak pages.</p>
+                <div class="card" style="margin-top: 2rem; background: var(--deep-navy); color: white;">
+                    <h3 style="margin-bottom: 0.5rem; color: var(--gold);">The Strategy Shift</h3>
+                    <p style="font-size: 1.1rem;">Stop treating "Learners" (Unaware Startups) like "Experts" (Global Banks).<br>We must <strong>Teach</strong> effectively before we can <strong>Transact</strong>.</p>
                 </div>
             </div>
         </section>
