Correction: Reverted Slide 14 title to 'The Experience Gap: Prestige vs. Utility' as requested.

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -482,7 +482,7 @@
         <section class="slide slide-light">
             <div class="animate-up">
                 <span class="tag tag-teal">Funnel Strategy</span>
-                <h2>The Experience Gap: B2B Awareness</h2>
+                <h2>The Experience Gap: Prestige vs. Utility</h2>
                 
                 <div class="card-grid" style="grid-template-columns: repeat(2, 1fr); gap: 2rem;">
                     
