Relocate Slide: Moved Case Study to follow Experience Gap Slide (Strategy -> Proof).

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -517,6 +517,31 @@
             </div>
         </section>
 
+        <!-- Slide 14b: Case Study: The "Unaware" Retailer -->
+        <section class="slide slide-alt">
+             <div class="animate-up">
+                <span class="tag tag-teal">Proof of Value</span>
+                <h2>Case Study: The "Unaware" Retailer</h2>
+                <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
+                    <div class="card">
+                        <h3>1. The Pain (Jordan)</h3>
+                        <p><strong>"I can't scale."</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Limited market, slow IP protection, no Saudi access.</p>
+                    </div>
+                    <div class="card">
+                        <h3>2. The Objection</h3>
+                        <p><strong>"DIFC is too expensive."</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">"Why pay $1,500 when I can get a UK LLC for €300?"</p>
+                    </div>
+                    <div class="card">
+                        <h3>3. The Education</h3>
+                        <p><strong>"Real Market Access"</strong></p>
+                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">"UK LLC = No Bank Account. DIFC = Access to Saudi Retailers."</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Slide 15: UX & Content Architecture -->
         <section class="slide slide-alt">
             <div class="animate-up">
@@ -774,30 +799,7 @@
             </div>
         </section>
 
-        <!-- Slide 22: Lifestyle Hubs -->
-        <section class="slide slide-alt">
-             <div class="animate-up">
-                <span class="tag tag-teal">Solution</span>
-                <h2>Case Study: The "Unaware" Retailer</h2>
-                <div class="card-grid" style="grid-template-columns: repeat(3, 1fr);">
-                    <div class="card">
-                        <h3>1. The Pain (Jordan)</h3>
-                        <p><strong>"I can't scale."</strong></p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">Limited market, slow IP protection, no Saudi access.</p>
-                    </div>
-                    <div class="card">
-                        <h3>2. The Objection</h3>
-                        <p><strong>"DIFC is too expensive."</strong></p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">"Why pay $1,500 when I can get a UK LLC for €300?"</p>
-                    </div>
-                    <div class="card">
-                        <h3>3. The Education</h3>
-                        <p><strong>"Real Market Access"</strong></p>
-                        <p style="font-size: 0.9rem; margin-top: 0.5rem;">"UK LLC = No Bank Account. DIFC = Access to Saudi Retailers."</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+
 
 
         <!-- SECTION 6: ROADMAP & EXECUTION -->
