Refine Roadmap Scale: Updated Slide 23 to align with B2B Strategy (Disavow, Case Studies, Regional Trust).

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -813,39 +813,39 @@
                 <div class="timeline-container">
                     <!-- Phase 1 -->
                     <div class="timeline-phase">
-                        <div class="phase-header">Phase 1: Foundation (Mo 0-2)</div>
+                        <div class="phase-header">Phase 1: Risk & Hygiene (Mo 0-2)</div>
                         <div class="phase-content">
                             <ul>
-                                <li>Fix 25 Critical Errors</li>
-                                <li>Reduce Form Friction</li>
-                                <li>Mobile Speed Boost</li>
-                                <li>"Quick Win" Content</li>
+                                <li><strong>Disavow Toxic Links</strong> (Defense)</li>
+                                <li>Navigation Revamp (Pain Points)</li>
+                                <li>Fix Critical Tech Errors (JS/Speed)</li>
+                                <li>Simplify "Enquire" Forms</li>
                             </ul>
                         </div>
                     </div>
                     <div class="timeline-arrow">➞</div>
                     <!-- Phase 2 -->
                     <div class="timeline-phase">
-                        <div class="phase-header">Phase 2: Expansion (Mo 2-5)</div>
+                        <div class="phase-header">Phase 2: The "Hub" Build (Mo 2-5)</div>
                         <div class="phase-content">
                             <ul>
-                                <li>Fix Setup Hub UX</li>
-                                <li>Launch "Scale" Case Studies</li>
-                                <li>Partner Badge Campaign</li>
-                                <li>Digital PR Launch</li>
+                                <li><strong>Deploy "Case Study" Hub</strong></li>
+                                <li>Launch "Expansion Planner" Tool</li>
+                                <li>Contextual Sidebar Integration</li>
+                                <li>Content: "English Law" Guides</li>
                             </ul>
                         </div>
                     </div>
                     <div class="timeline-arrow">➞</div>
                     <!-- Phase 3 -->
                     <div class="timeline-phase">
-                        <div class="phase-header">Phase 3: Dominate (Mo 5-9)</div>
+                        <div class="phase-header">Phase 3: Regional Scale (Mo 5-9)</div>
                         <div class="phase-content">
                             <ul>
-                                <li>Global Whitepapers</li>
-                                <li>International SEO</li>
-                                <li>Advanced CRO</li>
-                                <li>Rich Schema Rollout</li>
+                                <li><strong>Partner with Regional Chambers</strong></li>
+                                <li>"Saudi/Egypt" Cross-Border Guides</li>
+                                <li>Scaling the "Tenant Exchange"</li>
+                                <li>Advanced Data Capture (CRM)</li>
                             </ul>
                         </div>
                     </div>
